# EnjoyAndroid

./: README.md
app/: build.gradle
app/src/androidTest/java/com/hxj/enjoyandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  helloCpp.cpp
app/src/main/java/com/hxj/enjoyandroid/: BaseUiActivity.java  CustomViewActivity.java  MainActivity.java  NdkActivity.java  UIAdapter2Activity.java  UIAdapter3Activity.java  UIUtils.java
app/src/main/java/com/hxj/enjoyandroid/fragments/: BaseFragment.java  CanvasApiFragment.java  CanvasPathFragment.java  ColorMatrixFragment.java  ComposeViewFragment.java  EventViewFragment.java  GesutureOneFragment.java  HistogramFragment.java  PaintBasicFragment.java  PathApiFragment.java  (+3 more)
app/src/main/jniLibs/: Android.mk  hello.c
app/src/main/res/drawable/: item_selector.xml
app/src/main/res/layout/: activity_custom_view.xml  activity_main.xml  activity_ndk.xml  activity_uiadapter2.xml  activity_uiadapter2_1.xml  activity_uiadapter3.xml  fragment_androidmk.xml  fragment_canvs_api.xml  fragment_canvs_path_api.xml  fragment_cmake_list.xml  fragment_color_matrix.xml  fragment_compose_view.xml  fragment_event_view.xml  fragment_gesuture_onei.xml  fragment_histogram.xml  fragment_paint_basic.xml  fragment_path_api.xml  fragment_screen_coordinate.xml  fragment_self_draw.xml  fragment_text_paint.xml  item.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml
app/src/test/java/com/hxj/enjoyandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+40 files in other folders)
